# ColorLines

./: CMakeLists.txt  README.md
source/: gui.cpp  gui_drawing.cpp  gui_loader.cpp  logic.cpp  main.cpp  processor.cpp
source/headers/: gui.hpp  gui_drawing.cpp  gui_drawing.hpp  gui_loader.hpp  logic.hpp  mainStruts.h  processor.hpp
